tests/parser/statement_assign_err11.mtp
begin
	(*Missing id*)
	:= 10;
end
.